# vega-packaging

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: on_push.yml
src/vega/packaging/: commits.py  const.py  contextmanagers.py  decorators.py  factory.py  io.py  log.py  platforms.py  versions.py
src/vega/packaging/bootstrappers/: build_and_publish_package.py  update_semantic_version.py
src/vega/packaging/parsers/: abstract_parser.py  cargo.py  changelog.py  docker.py  docker_compose.py  githubenv.py  pyproject.py  react_package.py
tests/: conftest.py  test_build_and_publish.py  test_build_and_publish_e2e.py  test_vega_packaging.py
