[build-system]
requires = [ "setuptools >= 61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "vega-packaging"
version = "0.3.2"
description = "Command Line tool for updating data on files that relate to packaging"
dependencies = [ "toml",]
[[project.authors]]
name = "David Vega"
email = "david@vega.style"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/vegastyle/vega-packaging"
Repository = "https://github.com/vegastyle/vega-packaging.git"
Changelog = "https://github.com/vegastyle/vega-packaging/blob/main/CHANGELOG.md"

[project.scripts]
update_semantic_version = "vega.packaging.bootstrappers.update_semantic_version:main"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "vega.*",]
exclude = [ "venv", "tests", ".github",]
